Update privacy.html with company name

--- a/static/privacy.html
+++ b/static/privacy.html
@@ -10,7 +10,7 @@
 Privacy Policy  <br>
 ==============<br>
 <br>
-Last updated: June 17, 2022<br>
+Last updated: October 26, 2023<br>
 <br>
 This Privacy Policy describes Our policies and procedures on the collection,<br>
 use and disclosure of Your information when You use the Service and tells You<br>
@@ -38,7 +38,7 @@ For the purposes of this Privacy Policy:<br>
   * Account means a unique account created for You to access our Service or<br>
     parts of our Service.<br>
 <br>
-  * catpowered (referred to as either "catpowered", "We", "Us" or "Our" in this<br>
+  * CATPOWERED GAMES LTD (referred to as either "catpowered", "We", "Us" or "Our" in this<br>
     Agreement) refers to the body operating Our services, catpowered.net.<br>
 <br>
   * Cookies are small files that are placed on Your computer, mobile device or<br>
