--- a/django/static/privacy.html
+++ b/django/static/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +7,7 @@
         <meta name="description" content="catpowered's privacy policy">
     </head>
     <body>
-Privacy Policy  <br>
+<h1>Privacy Policy</h1>  <br>
 ==============<br>
 <br>
 Last updated: October 26, 2023<br>
