improve accessibility and seo

--- a/django/static/privacy.html
+++ b/django/static/privacy.html
@@ -69,7 +69,7 @@ For the purposes of this Privacy Policy:<br>
     use of the Service or from the Service infrastructure itself (for example,<br>
     the duration of a page visit).<br>
 <br>
-  * Website refers to catpowered, accessible from <https://catpowered.net/><br>
+  * Website refers to catpowered, accessible from https://catpowered.net/<br>
 <br>
   * You means the individual accessing or using the Service, or the company,<br>
     or other legal entity on behalf of which such individual is accessing or<br>
